# pydocstyle-formatter

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
pycodestyle_autoformatter/: formatter.py
pydocstyle_autoformatter/: cli.py  pydoc_formatter.py
tests/: test_pycodestyle_autoformatter.py
tests/D400/: multi_missing_period.py  multi_missing_period_2.py  single_missing_period.py
