[tool.poetry]
name = "pycodestyle_autoformatter"
version = "0.1.0"
description = "will try to format pydocstyle checks."
authors = ["Anders Steen <asteennilsen@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pydocstyle = "^6.1.1"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "latest"

[tool.black]
skip-string-normalization = "true"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
